# l2auth

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT  CONTRIBUTING  Dockerfile  LICENSE  Makefile  README  README.md  asocket.h  asocket_linux.c  asocket_windows.c  blowfish.c  blowfish.h  build.bat  build.sh  compile_and_run_gs.sh  compile_and_run_ls.sh  directory.c  directory.h  docker-compose.yml  dockerfile  format.sh  game_server.c  game_server_lib.c  game_server_lib.h  lib.c  lib.h  library.c  library.h  login_access.txt  login_server  login_server.bat  login_server.c  main.c  net.h  net_linux.c  net_windows.c  (+9 more)
.github/: FUNDING.yml
client_packet/: client_packet_decrypted.c
core/: byte_buffer.c  byte_buffer.h  byte_builder.c  byte_builder.h  byte_reader.c  byte_reader.h  circular_memory_alloc.c  circular_memory_alloc.h  connection_thread.h  decrypt_client_request.c  endian.c  endian.h  hex.c  hex.h  l2_blowfish_key.c  l2_blowfish_key.h  l2_client.c  l2_client.h  l2_client_packet_type.c  l2_packet.c  l2_packet.h  l2_raw_packet.c  l2_raw_packet.h  l2_rsa_key.c  l2_rsa_key.h  l2_server.c  l2_server.h  l2_socket.c  l2_socket.h  l2_string.c  l2_string.h  memory.c  memory.h  send_packet.c  send_packet.h  send_sendable_encrypted_packet.c  send_sendable_packet.c  session_key.c  session_key.h
data_structure/: hashtable.c  hashtable.h  list.c  list.h  memory_cb.h  queue.c  queue.h
game/: .editorconfig  .gitignore  Dockerfile  Makefile  README  bridge.c  bridge.h  client.c  client.h  client_connection.h  code.c  code.h  connection.h  crypt.c  crypt.h  debug.sh  game_server_lib.c  game_server_lib.h  handle_client.c  handle_client.h  main.c  memory.c  memory.h  request.h  request_manager.c  request_manager.h  response_manager.c  response_manager.h  server.c  server.h  server_timer.c  server_timer.h  socket.c  socket.h  state.h  timer.c  timer.h  watch.sh  work_queue.c  work_queue.h
game/action/: request_type.h
game/client/: handler_new.c  handler_request.c
game/db/: char.c  char.h  conn.c  conn.h
game/dto/: char.h  location.h
game/entity/: character.c  character.h  location.h  npc.h  player.c  player.h  vec3.h
game/handler/: auth_login.c  auth_login.h  client.c  client.h  create_character.c  create_character.h  d0.c  d0.h  dynamic_client.c  dynamic_client.h  encrypt.c  encrypt.h  enter_world.c  enter_world.h  move_backwards_to_location.c  move_backwards_to_location.h  new_character.c  new_character.h  protocol_version.c  protocol_version.h  request_quests.c  request_quests.h  restart.c  restart.h  say.c  say.h  select_character.c  select_character.h  validate_position.c  validate_position.h
game/lib/: Makefile  README  byte_read.h  byte_write.h  character.c  character.h  class_id.h  client.c  client.h  client_manager.c  client_manager.h  config.h  decrypt.c  decrypt.h  decrypt_packet.c  decrypt_packet.h  encrypt.c  encrypt_packet.c  encrypt_packet.h  entry.c  entry.h  game_server.c  game_server.h  headers.h  host.h  l2_string.c  l2_string.h  packet.c  packet.h  packet_builder.c  packet_builder.h  player.h  player_template.h  position.c  position.h  race_id.h  request.c  request.h  session.c  session.h  (+12 more)
game/packet/: char_create_ok.c  char_create_ok.h  char_info.c  char_info.h  char_list.c  char_list.h  char_move_to_loc.c  char_move_to_loc.h  char_selected.c  char_selected.h  char_template.c  char_template.h  client_type.h  creature_say.c  creature_say.h  crypt_init.c  crypt_init.h  enter_world.c  enter_world.h  player_auth_request.c  player_auth_request.h  quest_list.c  quest_list.h  restart.c  restart.h  validate_position.c  validate_position.h
game/request/: type.h
game/script/: client_request.sh
game/service/: char_list.c  char_list.h  char_movement.c  char_movement.h  create_char.c  create_char.h  load_char.c  load_char.h  persist_char.c  persist_char.h
game/src/: Makefile  code.c  code.h  connection_manager.c  connection_manager.h  game_server_lib.c  game_server_lib.h  main.c  mem.c  memory_manager.c  memory_manager.h  (+16 more)
game_server/: CMakeLists.txt  build.sh
game_server_lib/: CMakeLists.txt  build.sh
gamealt/: gameserver.db
login/: .editorconfig  Dockerfile  Makefile  README  blowfish.c  blowfish.h  byte_write.h  client.c  client.h  connection.h  decrypt_packet.c  decrypt_packet.h  encrypt_packet.c  encrypt_packet.h  helper.c  helper.h  loginserver  main.c  packet.c  packet.h  rsa.c  rsa.h  server.c  server.h  session_key.c  socket.c  socket.h
login_server/: CMakeLists.txt  build.sh
new_src/: packet.c  util.c
openssl-1.1/: version.txt
os/: memory.h  socket.h  thread.h
packet/: builder.c  helper.c  helper.h
server_packet/: server_packet_encrypted.c  server_packet_gg_auth.c  server_packet_init.c  server_packet_login_fail.c  server_packet_sendable.c
shared/: CMakeLists.txt  build.sh  config.sh
socket_strategy/: socket_strategy_linux.c  socket_strategy_linux.h  socket_strategy_windows.c
src/: blowfish.c  character.c  character_template.c  config.c  conn.c  game_request.c  game_response.c  game_server.c  game_server_crypt.c  game_server_lib.c  game_server_request.c  game_session.c  gs_ai.c  gs_character.c  gs_character_template.c  gs_client_packets.c  gs_crypt.c  gs_ctrl.c  gs_lib.c  gs_packet_action_request.c  gs_packet_attack.c  gs_packet_auth_login.c  gs_packet_auth_request.c  gs_packet_auto_attack.c  gs_packet_char_info.c  gs_packet_char_select.c  gs_packet_char_select_request.c  gs_packet_create_char.c  gs_packet_create_char_request.c  gs_packet_d0.c  gs_packet_die.c  gs_packet_enter_world.c  gs_packet_leave_world.c  gs_packet_move.c  gs_packet_move_request.c  gs_packet_new_char.c  gs_packet_npc_info.c  gs_packet_protocol_version.c  gs_packet_quest_list.c  gs_packet_restart.c  (+58 more)
src2/: endian.c  game_request.c  game_response.c  game_server.c  game_session.c  l2_string.c  linux_endian.c  linux_game_server.c  linux_login_server.c  linux_network.c  linux_random.c  linux_socket.c  linux_storage.c  login_request.c  login_response.c  login_server.c  login_session.c  packet.c
util/: get_client_packet_type.c
(+776 files in other folders)
